--- a/LivrariaFront/appsettings.json
+++ b/LivrariaFront/appsettings.json
@@ -1,5 +1,5 @@
-﻿{
-    "ApiSettings": {
-        "BaseUrl": "https://livraria-rghy.onrender.com"
-    }
+{
+  "ApiSettings": {
+    "BaseUrl": "https://livraria-rghy.onrender.com/"
+  }
 }
